<resources>
    <string name="app_name">CineList</string>
    <string name="menu_home">Home</string>
    <string name="menu_watchlist">WatchList</string>
    <string name="menu_profile">Profile</string>
    <string name="placeholder_search">Search Here</string>
    <string name="home_title">Cinema Movie List</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove_from_watchlist">Remove from Watchlist</string>
    <string name="detail_title">Detail Movie</string>
    <string name="watchlist_title">Watchlist</string>
    <string name="duration_icon">Duration Icon</string>
    <string name="banner_image">Banner Image</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="about_image">Profile Image</string>
    <string name="search_message">No Result</string>
    <string name="watchlist_message">No watchlist data available</string>
    <string name="about_name">Gerry Satria Halim</string>
    <string name="about_email">gerrysatria10@gmail.com</string>
    <string name="back">Back</string>
    <string name="rating">Rating</string>
</resources>