...
        if (watchList.isNotEmpty()) {
            LazyVerticalGrid(
                columns = GridCells.Adaptive(160.dp),
                contentPadding = PaddingValues(16.dp),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = modifier.testTag("MovieList")
            ) {
                items(watchList, key = { it.movie.id}) { data ->
                    MovieItem(
                        image = data.movie.poster,
                        title = data.movie.name,
                        duration = data.movie.duration,
...
